# FileSystem

./: .gitignore  README.md  documentación.md
fsck.bwfs/: Cargo.toml
fsck.bwfs/src/: main.rs
fsck.bwfs/src/filestructure/: fileTimeSpec.rs  fileType.rs
fsck.bwfs/src/fsstructure/: Disk.rs  Inode.rs  filesystem_management.rs  memory_block.rs  save_disk.rs
mkfs.bwfs/: Cargo.toml
mkfs.bwfs/src/: main.rs
mkfs.bwfs/src/filestructure/: fileTimeSpec.rs  fileType.rs
mkfs.bwfs/src/fsstructure/: Disk.rs  Inode.rs  filesystem_management.rs  memory_block.rs  save_disk.rs
mount.bwfs/: Cargo.toml
mount.bwfs/src/: main.rs
mount.bwfs/src/filestructure/: fileAttribute.rs  fileTimeSpec.rs  fileType.rs
mount.bwfs/src/fsstructure/: Disk.rs  Inode.rs  filesystem_management.rs  memory_block.rs  save_disk.rs
proyecto02/: Cargo.toml
proyecto02/src/: main.rs
proyecto02/src/filestructure/: fileAttribute.rs  fileTimeSpec.rs
proyecto02/src/fsstructure/: Disk.rs  FilesystemManagement.rs  Inode.rs  MemoryBlock.rs  SaveDisk.rs  filesystem_management.rs  memory_block.rs  save_disk.rs
