[package]
name = "mount.bwfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuse = "0.3.1"
libc = "0.2"
env_logger = "0.6.1"
log = "0.4.6"
thread-scoped = "1.0.2"
time = "0.1"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
quircs = "0.10.0"
image = "0.23"
sysinfo = "0.24.5"
png = "0.17.7"
